@@ -16,6 +16,7 @@
     * src/main.c: Added proper support for signature notifications via 
     libnotify (bug# 314782)
     * libseahorse/seahorse-key-store.c: Show short key id in display
+    * libseahorse/seahorse-default-key-control.c: Code cleanup
     
 2005-08-28  Adam Schreiber <sadam@clemson.edu>
     * libseahorse/seahorse-gpgmex-op.c:
